# Villicus

./: .gitignore  CHANGELOG.MD  README.MD  main.py  pyproject.toml  requirements.txt  todo.md  villicus.py
.avalon/: gen.py  package
docs/: api.md  config.md
source/: bar.css  table.css
static/: bar.css  proc.css  proclist.css  table.css
static/js/: bar.mjs  common.mjs
templates/: bar.html  list.html  main.html  proc.html
